--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
