--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,6 @@
     "plugins": [
       "react",
       "@typescript-eslint",
-      "jsx-a11y",
       "import",
       "prettier",
       "simple-import-sort"
@@ -41,6 +40,7 @@
               "unnamedComponents": "arrow-function"
             }
           ],
+      "react/*": "warn",
       "import/extensions": [
         "error",
         "ignorePackages",
@@ -62,7 +62,8 @@
       "react/require-default-props": ["error", { "ignoreFunctionalComponents": true }],
       "react/button-has-type": "off",
       "simple-import-sort/imports": "error",
-      "simple-import-sort/exports": "error"
+      "simple-import-sort/exports": "error",
+      "no-console": "off"
     },
     "settings": {
       "import/resolver": {
